--- a/twitoff/notebooks/LS332_DSPT7_APIs_Demo.ipynb
+++ b/twitoff/notebooks/LS332_DSPT7_APIs_Demo.ipynb
@@ -66,24 +66,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "[&#39;__class__&#39;,\n &#39;__delattr__&#39;,\n &#39;__dict__&#39;,\n &#39;__dir__&#39;,\n &#39;__doc__&#39;,\n &#39;__eq__&#39;,\n &#39;__format__&#39;,\n &#39;__ge__&#39;,\n &#39;__getattribute__&#39;,\n &#39;__gt__&#39;,\n &#39;__hash__&#39;,\n &#39;__init__&#39;,\n &#39;__init_subclass__&#39;,\n &#39;__le__&#39;,\n &#39;__lt__&#39;,\n &#39;__module__&#39;,\n &#39;__ne__&#39;,\n &#39;__new__&#39;,\n &#39;__reduce__&#39;,\n &#39;__reduce_ex__&#39;,\n &#39;__repr__&#39;,\n &#39;__setattr__&#39;,\n &#39;__sizeof__&#39;,\n &#39;__str__&#39;,\n &#39;__subclasshook__&#39;,\n &#39;__weakref__&#39;,\n &#39;_add_list_members&#39;,\n &#39;_lookup_friendships&#39;,\n &#39;_pack_image&#39;,\n &#39;_remove_list_members&#39;,\n &#39;_send_direct_message&#39;,\n &#39;add_list_member&#39;,\n &#39;add_list_members&#39;,\n &#39;api_root&#39;,\n &#39;auth&#39;,\n &#39;blocks&#39;,\n &#39;blocks_ids&#39;,\n &#39;cache&#39;,\n &#39;compression&#39;,\n &#39;configuration&#39;,\n &#39;create_block&#39;,\n &#39;create_favorite&#39;,\n &#39;create_friendship&#39;,\n &#39;create_list&#39;,\n &#39;create_media_metadata&#39;,\n &#39;create_mute&#39;,\n &#39;create_saved_search&#39;,\n &#39;destroy_block&#39;,\n &#39;destroy_direct_message&#39;,\n &#39;destroy_favorite&#39;,\n &#39;destroy_friendship&#39;,\n &#39;destroy_list&#39;,\n &#39;destroy_mute&#39;,\n &#39;destroy_saved_search&#39;,\n &#39;destroy_status&#39;,\n &#39;favorites&#39;,\n &#39;followers&#39;,\n &#39;followers_ids&#39;,\n &#39;friends&#39;,\n &#39;friends_ids&#39;,\n &#39;friendships_incoming&#39;,\n &#39;friendships_outgoing&#39;,\n &#39;geo_id&#39;,\n &#39;geo_search&#39;,\n &#39;geo_similar_places&#39;,\n &#39;get_direct_message&#39;,\n &#39;get_list&#39;,\n &#39;get_oembed&#39;,\n &#39;get_saved_search&#39;,\n &#39;get_settings&#39;,\n &#39;get_status&#39;,\n &#39;get_user&#39;,\n &#39;home_timeline&#39;,\n &#39;host&#39;,\n &#39;list_direct_messages&#39;,\n &#39;list_members&#39;,\n &#39;list_subscribers&#39;,\n &#39;list_timeline&#39;,\n &#39;lists_all&#39;,\n &#39;lists_memberships&#39;,\n &#39;lists_subscriptions&#39;,\n &#39;lookup_friendships&#39;,\n &#39;lookup_users&#39;,\n &#39;me&#39;,\n &#39;media_upload&#39;,\n &#39;mentions_timeline&#39;,\n &#39;mutes&#39;,\n &#39;mutes_ids&#39;,\n &#39;parser&#39;,\n &#39;proxy&#39;,\n &#39;rate_limit_status&#39;,\n &#39;related_results&#39;,\n &#39;remove_list_member&#39;,\n &#39;remove_list_members&#39;,\n &#39;report_spam&#39;,\n &#39;retry_count&#39;,\n &#39;retry_delay&#39;,\n &#39;retry_errors&#39;,\n &#39;retweet&#39;,\n &#39;retweeters&#39;,\n &#39;retweets&#39;,\n &#39;retweets_of_me&#39;,\n &#39;reverse_geocode&#39;,\n &#39;saved_searches&#39;,\n &#39;search&#39;,\n &#39;search_host&#39;,\n &#39;search_root&#39;,\n &#39;search_users&#39;,\n &#39;send_direct_message&#39;,\n &#39;set_settings&#39;,\n &#39;show_friendship&#39;,\n &#39;show_list_member&#39;,\n &#39;show_list_subscriber&#39;,\n &#39;statuses_lookup&#39;,\n &#39;subscribe_list&#39;,\n &#39;supported_languages&#39;,\n &#39;timeout&#39;,\n &#39;trends_available&#39;,\n &#39;trends_closest&#39;,\n &#39;trends_place&#39;,\n &#39;unretweet&#39;,\n &#39;unsubscribe_list&#39;,\n &#39;update_list&#39;,\n &#39;update_profile&#39;,\n &#39;update_profile_background_image&#39;,\n &#39;update_profile_banner&#39;,\n &#39;update_profile_image&#39;,\n &#39;update_status&#39;,\n &#39;update_with_media&#39;,\n &#39;upload_host&#39;,\n &#39;upload_root&#39;,\n &#39;user_timeline&#39;,\n &#39;verify_credentials&#39;,\n &#39;wait_on_rate_limit&#39;,\n &#39;wait_on_rate_limit_notify&#39;]"
-     },
-     "metadata": {},
-     "execution_count": 5
-    }
-   ],
-   "source": [
-    "dir(TWITTER)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
@@ -111,10 +93,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "user = TWITTER.get_user('dustinstri92')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "tweet = user.timeline()[0]"
+   ]
   },
   {
    "cell_type": "code",
@@ -125,10 +120,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def add_or_update_user(username, nlp):\n",
+    "    try:\n",
+    "        twitter_user = TWITTER.get_user(username)\n",
+    "        tweets = twitter_user.timeline(count=200,\n",
+    "                                    exclude_replies=True,\n",
+    "                                    include_rts=False,\n",
+    "                                    tweet_mode='extended')\n",
+    "        embeddings = vectorize_tweet(nlp, tweets[0].full_text)\n",
+    "    except Exception as e:\n",
+    "        print('Error processing {}: {}'.format(username, e))\n",
+    "    return tweets, embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_user_tweepy(username):\n",
+    "    '''Add a user and their tweets to database'''\n",
+    "    try:\n",
+    "        # Get user info from tweepy\n",
+    "        twitter_user = TWITTER.get_user(username)\n",
+    "        # Add to User table (or check if existing)\n",
+    "        db_user = (User.query.get(twitter_user.id) or\n",
+    "                   User(id=twitter_user.id,\n",
+    "                        username=username,\n",
+    "                        follower_count=twitter_user.followers_count))\n",
+    "        db.session.add(db_user)\n",
+    "        # Get tweets ignoring re-tweets and replies\n",
+    "        tweets = twitter_user.timeline(count=200,\n",
+    "                                       exclude_replies=True,\n",
+    "                                       include_rts=False,\n",
+    "                                       tweet_mode='extended',\n",
+    "                                       since_id=db_user.newest_tweet_id)\n",
+    "        # Add newest_tweet_id to the User table\n",
+    "        if tweets:\n",
+    "            db_user.newest_tweet_id = tweets[0].id\n",
+    "        # Loop over tweets, get embedding and add to Tweet table\n",
+    "        for tweet in tweets:\n",
+    "            # Get an examble basilica embedding for first tweet\n",
+    "            embedding = BASILICA.embed_sentence(tweet.full_text, model='twitter')\n",
+    "            # Add tweet info to Tweet table\n",
+    "            db_tweet = Tweet(id=tweet.id,\n",
+    "                             text=tweet.full_text[:300],\n",
+    "                             embedding=embedding)\n",
+    "            db_user.tweet.append(db_tweet)\n",
+    "            db.session.add(db_tweet)\n",
+    "    except Exception as e:\n",
+    "        print('Error processing {}: {}'.format(username, e))\n",
+    "        raise e\n",
+    "    else:\n",
+    "        # If no errors happend than commit the records\n",
+    "        db.session.commit()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -139,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,17 +199,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nlp = spacy.load('en_core_web_sm')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "doc = nlp(tweet.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[&#39;To&#39;, &#39;err&#39;, &#39;is&#39;, &#39;human&#39;, &#39;,&#39;, &#39;but&#39;, &#39;to&#39;, &#39;really&#39;, &#39;foul&#39;, &#39;things&#39;, &#39;up&#39;, &#39;requires&#39;, &#39;the&#39;, &#39;root&#39;, &#39;password&#39;, &#39;.&#39;, &#39;\\n&#39;, &#39;-Unknown&#39;]\n"
+    }
+   ],
+   "source": [
+    "print([token.text for token in doc])"
+   ]
   },
   {
    "cell_type": "markdown",
