--- a/twitoff/notebooks/LS332_DSPT7_APIs_Demo(1).ipynb
+++ b/twitoff/notebooks/LS332_DSPT7_APIs_Demo(1).ipynb
@@ -228,31 +228,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named &#39;spacy&#39;",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m&lt;ipython-input-22-76a01d9c502b&gt;\u001b[0m in \u001b[0;36m&lt;module&gt;\u001b[1;34m\u001b[0m\n\u001b[1;32m----&gt; 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mspacy\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named &#39;spacy&#39;"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import spacy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[&#39;__builtins__&#39;,\n &#39;__cached__&#39;,\n &#39;__doc__&#39;,\n &#39;__file__&#39;,\n &#39;__loader__&#39;,\n &#39;__name__&#39;,\n &#39;__package__&#39;,\n &#39;__path__&#39;,\n &#39;__spec__&#39;,\n &#39;convert&#39;,\n &#39;converters&#39;,\n &#39;debug_data&#39;,\n &#39;download&#39;,\n &#39;evaluate&#39;,\n &#39;info&#39;,\n &#39;init_model&#39;,\n &#39;link&#39;,\n &#39;package&#39;,\n &#39;pretrain&#39;,\n &#39;profile&#39;,\n &#39;train&#39;,\n &#39;validate&#39;]"
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
+   "source": [
+    "spacy."
+   ]
   },
   {
    "cell_type": "code",
@@ -262,11 +261,11 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Bringing it all together"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -339,8 +338,8 @@
    "provenance": []
   },
   "kernelspec": {
-   "name": "python_defaultSpec_1601607395505",
-   "display_name": "Python 3.7.5 64-bit ('DSPT6-Twitoff': pipenv)",
+   "name": "python38264bittwitoffpipenvcf139b4544a54b718f29ef41926b65d9",
+   "display_name": "Python 3.8.2 64-bit ('twitoff': pipenv)",
    "metadata": {
     "interpreter": {
      "hash": "003ac9aaa1485d5b771c302278ee1fa2d675754790301e4c4d0b7cf7d8ab189c"
@@ -357,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5-final"
+   "version": "3.8.2-final"
   },
   "toc": {
    "base_numbering": 1,
